lab-5/travel-control/templates/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: travel-control
  annotations:
    openshift.io/description: "Travel Control Namespace"
    openshift.io/display-name: "Travel Control Namespace" 
    argocd.argoproj.io/sync-wave: "1"
