lab-5/travel-control/templates/route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: travel-control
  namespace: travel-control
spec:
  to:
    kind: Service
    name: control-vm
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  wildcardPolicy: None
