lab-5/travel-control/templates/ap-allow-nothing.yaml
kind: AuthorizationPolicy
apiVersion: security.istio.io/v1beta1
metadata:
  name: allow-nothing
  namespace: travel-control
spec: {}
